collection detail page overflow issue fixed

--- a/src/views/Nft/SellRequest/style.module.scss
+++ b/src/views/Nft/SellRequest/style.module.scss
@@ -24,13 +24,11 @@
     }
   }
   .img {
-    overflow: hidden;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     background: #fff;
-
     border: 1px solid colors.$icon;
     border-radius: 7px;
     overflow: hidden;
